<resources>
    <string name="app_name">Clima App</string>
    <string name="chanelName">Weather</string>
    <string name="channel_description">No Alerts For Today</string>

    <string name="language">Language</string>
    <string name="location">Location</string>
    <string name="unit">Units</string>
    <string name="notifications">Notifications</string>


    <string name="Celsius">°C</string>
    <string name="Fahrenheit">°F</string>
    <string name="Kelvin">°K</string>
    <string name="windMeter">m/s</string>
    <string name="windMile">M/h</string>

    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="standard">Standard</string>
    <string name="metric">Metric</string>
    <string name="imperial">Imperial</string>
    <string name="gps">GPS</string>
    <string name="maps">Maps</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>

    <string name="metricDesc">(Temprature: Celsius &amp; Wind speed: meter/sec)</string>
    <string name="standardDesc">(Temprature: Kelvin &amp; Wind speed: meter/sec)</string>
    <string name="imperialDesc">(Temprature: Fahrenheit &amp; Wind speed: miles/hour)</string>
    <string name="initial_setup">Initial setup</string>
    <string name="ok">OK</string>
    <string name="save">save</string>
    <string name="delete">delete</string>

    <string name="deleteMsg">Are you sure to delete this item ?</string>
    <string name="saveLocation">Are you sure to save this location ?</string>
    <string name="initial_setup_desc">How would like to access a location weather?</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="wind_speed">Wind speed</string>
    <string name="clouds">Clouds</string>
    <string name="from">from</string>
    <string name="to">to</string>
    <string name="warning">When ou disable the notifications you cannot receive Alerts about the weather!</string>

    <string name="networkWarning">please, check your network!</string>
    <string name="google_maps_key">AIzaSyBwafGW_1ALwLW6N_47ktwF0pBrK4WdSHA</string>
    <string name="getCurrentLocation">Current Location</string>
    <string name="openMap">Open Map</string>

    <string name="start">Choose the date</string>
    <string name="getWeather">Get Weather Of ?</string>
    <string name="anotherLocation">Another Location</string>

    <string name="Home">Home</string>
    <string name="Favorite">Favorite</string>
    <string name="Alerts">Alerts</string>
    <string name="Settings">Settings</string>
    <string name="Cancel">Cancel</string>

    <string name="snackFAvUpdate">Connect to intertnet to  updated your favorite</string>
    <string name="noIntrent">No internet connection</string>
    <string name="conntectToInternet">Connected to internet</string>
    <string name="lostConnection">Lost connection to internet</string>
<string name="connectToUse">Connect to the Internet to use this feature</string>
    <string name="permissionRequired">This app needs permission to show notifications. Please enable it in the app settings.</string>
    <string name="permissionTitle">Permission required</string>

    <string name="F">"°F"</string>
    <string name="mh">"°F"</string>
    <string name="K">"°K"</string>
    <string name="ms">"°m/s"</string>
    <string name="C">"°C"</string>


</resources>