<?xml version="1.0" encoding="utf-8"?>
<ScrollView
xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".settings.view.SettingsFragment">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color"
    android:orientation="vertical">

    <TextView
        android:id="@+id/langSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/rounded_corners"
        android:padding="10dp"
        android:text="@string/language"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corners"
        android:layout_margin="10dp"
        android:padding="10dp">

        <RadioButton
            android:id="@+id/arabicLang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/material_dynamic_neutral70"
            android:text="@string/arabic"
            android:textColor="@color/white"
            android:textColorHighlight="@color/mySecondaryColor"
            android:textColorLink="@color/mySecondaryColor"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/englishLang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/material_dynamic_neutral70"
            android:text="@string/english"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/locationSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:background="@drawable/rounded_corners"
        />
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corners"
        android:layout_margin="10dp"
        android:padding="10dp">

        <RadioButton
            android:id="@+id/GPS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/material_dynamic_neutral70"
            android:text="@string/gps"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/material_dynamic_neutral70"
            android:text="@string/maps"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/unitSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/unit"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:background="@drawable/rounded_corners"
        />
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corners"
        android:layout_margin="10dp"
        android:padding="10dp">

        <RadioButton
            android:id="@+id/standardUnit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/material_dynamic_neutral70"
            android:text="@string/standard"
            android:textColor="@color/white"
            android:textSize="18sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/standardDesc"
            android:textSize="15sp"
            android:textColor="@color/gray"
            android:paddingLeft="20dp"
            android:paddingBottom="5dp"/>

        <RadioButton
            android:id="@+id/metricUnit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/material_dynamic_neutral70"
            android:text="@string/metric"
            android:textColor="@color/white"
            android:textSize="18sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/metricDesc"
            android:textSize="15sp"
            android:textColor="@color/gray"
            android:paddingLeft="20dp"
            android:paddingBottom="5dp"/>

        <RadioButton
            android:id="@+id/imperialUnit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/material_dynamic_neutral70"
            android:text="@string/imperial"
            android:textColor="@color/white"
            android:textSize="18sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/imperialDesc"
            android:textSize="15sp"
            android:textColor="@color/gray"
            android:paddingLeft="20dp"
            android:paddingBottom="5dp"/>
    </RadioGroup>

    <TextView
        android:id="@+id/NotificationSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notifications"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:background="@drawable/rounded_corners"
        />
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corners"
        android:layout_margin="10dp"
        android:padding="10dp">

        <RadioButton
            android:id="@+id/notiEnable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/material_dynamic_neutral70"
            android:text="@string/enabled"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/notiDisable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/material_dynamic_neutral70"
            android:text="@string/disabled"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </RadioGroup>

</LinearLayout>

</ScrollView>